# smart-floor-monitor-

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  _smoke_report.py  config.py  docker-compose.yml  docker-entrypoint.sh  logging_config.py  main.py  pyproject.toml  requirements.txt
api/: auth.py  health.py  ingest.py  ingest_auth.py  ingest_body_guard.py  ingest_schemas.py  pagination.py  routes.py  routes_machines.py  schemas.py  server.py  websocket.py
cv_pipeline/: capture.py  detector.py  kalman_tracker.py  light_detector.py
dashboard/: app.js  index.html  login.html  setup.html  style.css
db/: __init__.py  async_database.py  database.py  migrations.py  repository.py
docs/: DEPLOYMENT_CHECKLIST.md  GCP_DEPLOYMENT_GUIDE.md  GCP_QUICK_START.md  GCP_UI_GUIDE.md  README.md
edge/: __init__.py  agent.py  camera_crypto.py  event_bridge.py  live_status.py  local_camera_config.py  metadata_apply.py  offline_queue.py  sync_client.py
engine/: __init__.py  ai_chat.py  anti_cheat.py  circuit_breaker.py  data_retention.py  live_state_cache.py  machine_registry.py  models.py  notifier.py  object_store.py  pipeline_orchestrator.py  report_engine.py  session_manager.py  settings_manager.py  shutdown.py  snapshot_store.py
scripts/: __init__.py  deploy-gcp.sh  migrate_monolith_to_split.py
tests/: _test_registry_temp.py  conftest.py  test_anti_cheat.py  test_api.py  test_api_versioning.py  test_auth_security.py  test_capture.py  test_circuit_breaker.py  test_config.py  test_data_retention.py  test_detector.py  test_health.py  (+8 more)
(+33 files in other folders)
